# LLM_Inference_Power

./: .gitignore  883371.cobaltlog  890950.cobaltlog  891185.cobaltlog  891633.cobaltlog  892090.cobaltlog  KL_test.py  KL_test_seq.py  README.md  data_parallel_test.py  run_bench.sh  run_bench_quick.sh  synthetic_test.py  test_text_dataset.py
AMD/: profiler.py  profiler_utils.py  test.py  test_text_dataset.py  utils.py
Intel/: CMakeLists.txt  gpu_power.hpp  hf.py  install_stuff.sh  power_utils.py  profiler.py  profiler_utils.py  start_ray.sh  test.py  test_small.sh  test_text_dataset.py  test_vllm.py  utils.py  vLLM_test_14B.sh  vLLM_test_32B.sh  vLLM_test_70B.sh  vLLM_test_7B.sh  vLLM_test_all.sh
Intel/DS_test/: test.sh
Intel/old_test/: test_accelerate.py  test_accelerate.sh  test_vLLM.py
Nvidia/: Polaris_run.sh  Polaris_run_mlsys.sh  Polaris_setup.sh  download.sh  download_model.py  hf.py  hf_test.py  idle_power.py  offline_batch.py  offline_test.sh  power_utils.py  profiler.py  profiler_utils.py  quantize_to_int8.py  run_bench_big.sh  synthetic_test.py  temp.sh  test_accelerate.py  test_dataset.ipynb  test_real_dataset.ipynb  test_text_dataset.py  test_vLLM.py  test_vLLM_temp.py  utils.py  vLLM.py  vLLM2.py  vLLM_single.py  vLLM_test_14B.sh  vLLM_test_32B.sh  vLLM_test_70B.sh  vLLM_test_7B.sh  vLLM_test_big.sh  vLLM_test_small.sh
Results/: Data_Analysis.ipynb  Dataset_test_analysis.ipynb  EP_or_TP.ipynb  KL_divergence.csv  KL_results.csv  base_performance.old.csv  dataset.ipynb  dataset_inference_results.csv  dataset_inference_results.eager_mode.csv  (+14 more)
(+377 files in other folders)
